added gif libraries

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         display:none;
       }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/gifuct-js/dist/gifuct.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gif.js.optimized/dist/gif.js"></script>
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/face-api.js/dist/face-api.min.js"></script> -->
   </head>
   <body>
