--- a/index.html
+++ b/index.html
@@ -293,194 +293,199 @@ goToGame.onclick = () => {
 // **********************   FLAPPY GAME   ***************************
 // ******************************************************************
 
-//board
 let board;
-let boardWidth = 560;
-let boardHeight = 640;
+let boardWidth;
+let boardHeight;
 let context;
 
 //bird
-let birdWidth = 75; //width/height ratio = 408/228 = 17/12
+let birdWidth = 75; // width ratio
 let birdHeight = 115;
-let birdX = boardWidth/8;
-let birdY = boardHeight/2;
+let birdX;
+let birdY;
 
-let bird = {
-    x : birdX,
-    y : birdY,
-    width : birdWidth,
-    height : birdHeight
-}
+let bird = { x: 0, y: 0, width: birdWidth, height: birdHeight };
 
 //pipes
 let pipeArray = [];
-let pipeWidth = 64; //width/height ratio = 384/3072 = 1/8
+let pipeWidth = 64;
 let pipeHeight = 512;
-let pipeX = boardWidth;
+let pipeX;
 let pipeY = 0;
 
 let topPipeImg;
 let bottomPipeImg;
 
 //physics
-let velocityX = -2; //pipes moving left speed
-let velocityY = 0; //bird jump speed
+let velocityX = -2; // pipe speed
+let velocityY = 0;
 let gravity = 0.4;
 
 let gameOver = false;
 let score = 0;
 let gameStarted = false;
+let pipeInterval;
 
-
-window.onload = function() {
+// ------------------- INIT GAME -------------------
+function initGame() {
     board = document.getElementById("board");
-    board.height = boardHeight;
+
+    // scale canvas to mobile screen
+    boardWidth = window.innerWidth;
+    boardHeight = window.innerHeight;
     board.width = boardWidth;
-    context = board.getContext("2d"); //used for drawing on the board
+    board.height = boardHeight;
+    context = board.getContext("2d");
 
-    //draw flappy bird
-    // context.fillStyle = "green";
-    // context.fillRect(bird.x, bird.y, bird.width, bird.height);
+    // bird position
+    birdX = boardWidth / 8;
+    birdY = boardHeight / 2;
+    bird.x = birdX;
+    bird.y = birdY;
+    bird.width = birdWidth;
+    bird.height = birdHeight;
 
-    //load images
-    birdImg = new Image();
-    birdImg.src = "./body1.png";
-    birdImg.onload = function() {
-        context.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
-    }
+    // pipe start X
+    pipeX = boardWidth;
 
+    // load pipe images
     topPipeImg = new Image();
     topPipeImg.src = "./toppipe.png";
-
     bottomPipeImg = new Image();
     bottomPipeImg.src = "./bottompipe.png";
 
+    // load bird image if not selfie
+    if (!window.selfieImage) {
+        birdImg = new Image();
+        birdImg.src = "./body1.png";
+        birdImg.onload = () => {
+            context.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
+        };
+    }
+
+    // add input listeners
+    document.addEventListener("keydown", jump);
+    board.addEventListener("mousedown", jump);
+    board.addEventListener("touchstart", jump);
+
     requestAnimationFrame(update);
-    // setInterval(placePipes, 1500); //every 1.5 seconds
-    document.addEventListener("keydown", moveBird);
 }
 
+// ------------------- JUMP FUNCTION -------------------
+function jump() {
+    if (!gameStarted) {
+        gameStarted = true;
+        pipeInterval = setInterval(placePipes, 1500);
+    }
+
+    velocityY = -7;
+
+    if (gameOver) {
+        // reset game
+        bird.y = birdY;
+        pipeArray = [];
+        score = 0;
+        gameOver = false;
+        gameStarted = false;
+        clearInterval(pipeInterval);
+    }
+}
+
+// ------------------- UPDATE LOOP -------------------
 function update() {
     requestAnimationFrame(update);
-    if (gameOver) {
-        return;
-    }
     context.clearRect(0, 0, board.width, board.height);
+
+    // draw bird
     context.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
+
     if (gameStarted) {
-        //bird
+        // apply gravity
         velocityY += gravity;
-        // bird.y += velocityY;
-        bird.y = Math.max(bird.y + velocityY, 0); //apply gravity to current bird.y, limit the bird.y to top of the canvas
-        
+        bird.y = Math.max(bird.y + velocityY, 0);
 
-        if (bird.y > board.height) {
-            gameOver = true;
-        }
+        // check bottom
+        if (bird.y + bird.height > board.height) gameOver = true;
 
-        //pipes
+        // draw pipes
         for (let i = 0; i < pipeArray.length; i++) {
             let pipe = pipeArray[i];
             pipe.x += velocityX;
             context.drawImage(pipe.img, pipe.x, pipe.y, pipe.width, pipe.height);
 
             if (!pipe.passed && bird.x > pipe.x + pipe.width) {
-                score += 0.5; //0.5 because there are 2 pipes! so 0.5*2 = 1, 1 for each set of pipes
+                score += 0.5; // top+bottom = 1
                 pipe.passed = true;
             }
 
-            if (detectCollision(bird, pipe)) {
-                gameOver = true;
-            }
+            if (detectCollision(bird, pipe)) gameOver = true;
         }
 
-        //clear pipes
+        // remove offscreen pipes
         while (pipeArray.length > 0 && pipeArray[0].x < -pipeWidth) {
-            pipeArray.shift(); //removes first element from the array
+            pipeArray.shift();
         }
     }
 
-    //score
+    // draw score
     context.fillStyle = "white";
-    context.font="45px sans-serif";
-    context.fillText(score, 5, 45);
+    context.font = "45px sans-serif";
+    context.fillText(Math.floor(score), 5, 45);
 
     if (gameOver) {
         context.fillStyle = "red";
         context.font = "40px sans-serif";
         context.fillText("GAME OVER", board.width / 4, board.height / 2 - 20);
 
-        // Draw final score below it
         context.fillStyle = "white";
         context.font = "35px sans-serif";
         context.fillText("Score: " + Math.floor(score), board.width / 3, board.height / 2 + 30);
     }
 }
 
+// ------------------- PLACE PIPES -------------------
 function placePipes() {
-    if (gameOver) {
-        return;
-    }
+    if (gameOver) return;
 
-    //(0-1) * pipeHeight/2.
-    // 0 -> -128 (pipeHeight/4)
-    // 1 -> -128 - 256 (pipeHeight/4 - pipeHeight/2) = -3/4 pipeHeight
-    let randomPipeY = pipeY - pipeHeight/4 - Math.random()*(pipeHeight/2);
-    let openingSpace = board.height/3;
+    let randomPipeY = pipeY - pipeHeight / 4 - Math.random() * (pipeHeight / 2);
+    let openingSpace = board.height / 3;
 
     let topPipe = {
-        img : topPipeImg,
-        x : pipeX,
-        y : randomPipeY,
-        width : pipeWidth,
-        height : pipeHeight,
-        passed : false
-    }
-    pipeArray.push(topPipe);
-
+        img: topPipeImg,
+        x: pipeX,
+        y: randomPipeY,
+        width: pipeWidth,
+        height: pipeHeight,
+        passed: false,
+    };
     let bottomPipe = {
-        img : bottomPipeImg,
-        x : pipeX,
-        y : randomPipeY + pipeHeight + openingSpace,
-        width : pipeWidth,
-        height : pipeHeight,
-        passed : false
-    }
-    pipeArray.push(bottomPipe);
+        img: bottomPipeImg,
+        x: pipeX,
+        y: randomPipeY + pipeHeight + openingSpace,
+        width: pipeWidth,
+        height: pipeHeight,
+        passed: false,
+    };
+    pipeArray.push(topPipe, bottomPipe);
 }
 
-function moveBird(e) {
-    if (e.code == "Space" || e.code == "ArrowUp" || e.code == "KeyX") {
-        //jump
-
-        if (!gameStarted) {
-            gameStarted = true; // start the game on first jump
-            // Start generating pipes only after game starts
-            pipeInterval = setInterval(placePipes, 1500);
-        }
-
-
-        velocityY = -7;
-
-        //reset game
-        if (gameOver) {
-            bird.y = birdY;
-            pipeArray = [];
-            score = 0;
-            gameOver = false;
-            gameStarted = false;   // wait for user input again
-            gameOverHandled = false;
-            clearInterval(pipeInterval);
-        }
-    }
-}
-
+// ------------------- COLLISION DETECTION -------------------
 function detectCollision(a, b) {
-    return a.x < b.x + b.width &&   //a's top left corner doesn't reach b's top right corner
-           a.x + a.width > b.x &&   //a's top right corner passes b's top left corner
-           a.y < b.y + b.height &&  //a's top left corner doesn't reach b's bottom left corner
-           a.y + a.height > b.y;    //a's bottom left corner passes b's top left corner
+    return (
+        a.x < b.x + b.width &&
+        a.x + a.width > b.x &&
+        a.y < b.y + b.height &&
+        a.y + a.height > b.y
+    );
 }
+
+// ------------------- START GAME -------------------
+goToGame.onclick = () => {
+    if (stream) stream.getTracks().forEach((t) => t.stop());
+    goToScreen(2); // third screen
+    loadBirdSelfie(); // your selfie overlay code
+    setTimeout(initGame, 100); // wait a moment for birdImg to load
+};
 
     </script>
 
